--- a/src/pages/machines/[id].astro
+++ b/src/pages/machines/[id].astro
@@ -45,7 +45,7 @@ export const prerender = true;
         </div>
 
         <!-- Botón volver -->
-        <a href="/" class="mt-4 text-xl text-white opacity-70 hover:underline">
+        <a href="/writeups-hacking" class="mt-4 text-xl text-white opacity-70 hover:underline">
           ← Volver atrás
         </a>
 
