Agregar la máquina Jerry

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ export const prerender = true;
                     <img
                       transition:name={`img-${slug}`}
                       class="mr-10 w-60 rounded"
-                      src={`/code/${img}`}
+                      src={`/${img}`}
                       alt={title}
                     />
                   </a>
