--- a/src/pages/machines/[id].astro
+++ b/src/pages/machines/[id].astro
@@ -53,7 +53,7 @@ export const prerender = true;
         <img 
           transition:name={`img-${slug}`} 
           class="rounded w-full max-w-xs md:w-55 h-auto mt-6" 
-          src={`/code/${img}`} 
+          src={`/${img}`} 
           alt={title} 
         />
       </div>
